# open5gs

./: .braids  .clang-tidy  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yaml  .gitmodules  01.pem  02.pem  CHANGES.md  INSTALL  INSTALL.md  KK.00.c  Makefile  Makefile.am  README  README.md  acinclude.m4  build.sh  configure.ac  dif.txt  main.c  meson.build  meson_options.txt  ssl.sh  symtbl.h  symtbl.sh
configs/: 00101.yaml.in  23504.yaml.in  310014.yaml.in  5gc-sample.yaml.in  5gc.yaml.in  app.yaml.in  attach.yaml.in  csfb.yaml.in  cups.yaml.in  dns.yaml.in  epc-fdconf.yaml.in  epc.yaml.in  gtp-proxy.yaml.in  installed.yaml.in  meson.build  minimal.yaml.in  mnc3.yaml.in  non3gpp.yaml.in  pwsiws.yaml  quickstart.yaml  sample.yaml.in  simple.yaml.in  slice.yaml.in  split.yaml.in  srsenb.yaml.in  srslte.yaml.in  transfer-error-case.yaml.in  transfer.yaml.in  volte.yaml.in  vonr.yaml.in
configs/examples/: 5gc-no-scp-sepp1-999-70.yaml.in  5gc-no-scp-sepp2-001-01.yaml.in  5gc-no-scp-sepp3-315-010.yaml.in  5gc-sepp1-999-70.yaml.in  5gc-sepp1-policy.yaml.in  5gc-sepp2-001-01.yaml.in  5gc-sepp2-policy.yaml.in  5gc-sepp3-315-010.yaml.in  5gc-sepp3-policy.yaml.in  5gc-tls-sepp1-999-70.yaml.in  5gc-tls-sepp2-001-01.yaml.in  5gc-tls-sepp3-315-010.yaml.in  gnb-001-01-ue-001-01.yaml.in  gnb-001-01-ue-315-010.yaml.in  gnb-001-01-ue-999-70.yaml.in  gnb-315-010-ue-001-01.yaml.in  gnb-315-010-ue-315-010.yaml.in  gnb-315-010-ue-999-70.yaml.in  gnb-999-70-ue-001-01.yaml.in  gnb-999-70-ue-315-010.yaml.in  gnb-999-70-ue-999-70.yaml.in  meson.build
configs/freeDiameter/: cacert.pem  hss.cert.pem  hss.conf.in  hss.key.pem  meson.build  mme.cert.pem  mme.conf.in  mme.key.pem  pcrf.cert.pem  pcrf.conf.in  pcrf.key.pem  pgw.cert.pem  pgw.conf.in  pgw.key.pem  smf.cert.pem  smf.conf.in  smf.key.pem
configs/logrotate/: meson.build  open5gs.in
configs/newsyslog/: meson.build  open5gs.conf.in
configs/open5gs/: amf.yaml.in  ausf.yaml.in  bsf.yaml.in  hss.yaml.in  lmf.yaml.in  meson.build  mme.yaml.in  nrf.yaml.in  nssf.yaml.in  pcf.yaml.in  pcrf.yaml.in  pgw.yaml.in  policy.yaml.in  scp.yaml.in  sepp1.yaml.in  sepp2.yaml.in  sgw.yaml.in  sgwc.yaml.in  sgwu.yaml.in  smf.yaml.in  smsf.yaml.in  subscriber.yaml.in  udm.yaml.in  udr.yaml.in  upf.yaml.in
configs/systemd/: 99-open5gs.network  meson.build  open5gs-amfd.service.in  open5gs-ausfd.service.in  open5gs-bsfd.service.in  open5gs-hssd.service.in  open5gs-mmed.service.in  open5gs-nrfd.service.in  open5gs-nssfd.service.in  open5gs-pcfd.service.in  open5gs-pcrfd.service.in  open5gs-pgwd.service.in  open5gs-scpd.service.in  open5gs-seppd.service.in  open5gs-sgwcd.service.in  open5gs-sgwd.service.in  open5gs-sgwud.service.in  open5gs-smfd.service.in  open5gs-smsfd.service.in  open5gs-udmd.service.in  open5gs-udrd.service.in  open5gs-upfd.service.in
lib/: Makefile.am  meson.build  ogs-app.h  ogs-common.h  ogs-dbi.h  ogs-diameter.h  ogs-gtp.h  ogs-nas.h  ogs-s1ap.h  ogs-sctp.h
lib/3gpp/: 3gpp_common.c  3gpp_common.h  3gpp_conv.c  3gpp_conv.h  3gpp_defs.h  3gpp_message.h  3gpp_types.h  Makefile.am  key_derive.c  key_derive.h  plmn_id.c  plmn_id.h  types.h
lib/app/: Makefile.am  meson.build  ogs-app.h  ogs-config.c  ogs-config.h  ogs-context.c  ogs-context.h  ogs-init.c  ogs-init.h  ogs-yaml.c  ogs-yaml.h
lib/asn/: Makefile.am  README  s1ap_common.c  s1ap_common.h  s1ap_decoder.c  s1ap_encoder.c  s1ap_ies_defs.h  s1ap_xer_print.c
lib/asn1c/: Makefile.am  meson.build  s1ap-decoder.c  s1ap-encoder.c  s1ap-free.c  s1ap-message.h  s1ap_asn1c.h  s1ap_decoder.c  s1ap_encoder.c  s1ap_free.c  s1ap_message.h
lib/base/: Makefile.am  base.h  context.c  context.h  types.c  types.h
lib/cdr/: ber.c  ber.h  file.c  meson.build  ogs-cdr.h  pgw-record.c  sgw-record.c
lib/core/: Makefile.am  abts.c  abts.h  meson.build  ogs-3gpp-types.c  ogs-3gpp-types.h  ogs-abort.c  ogs-abort.h  ogs-compat.h  ogs-conv.c  ogs-conv.h  ogs-core.c  ogs-core.h  ogs-env.c  ogs-env.h  ogs-epoll.c  ogs-errno.c  ogs-errno.h  ogs-file.c  ogs-file.h  ogs-fsm.c  ogs-fsm.h  ogs-getopt.c  ogs-getopt.h  ogs-hash.c  ogs-hash.h  ogs-kqueue.c  ogs-list.h  ogs-log.c  ogs-log.h  ogs-macros.h  ogs-memory.c  ogs-memory.h  ogs-misc.c  ogs-misc.h  ogs-notify.c  ogs-notify.h  ogs-pkbuf.c  ogs-pkbuf.h  ogs-poll-private.h  (+45 more)
lib/crypt/: curve25519-donna.c  ecc.c  ecc.h  kasumi.c  kasumi.h  meson.build  milenage.c  milenage.h  ogs-aes-cmac.c  ogs-aes-cmac.h  ogs-aes.c  ogs-aes.h  ogs-base64.c  ogs-base64.h  ogs-crypt.h  ogs-kdf.c  ogs-kdf.h  ogs-sha1-hmac.c  ogs-sha1-hmac.h  ogs-sha1.c  ogs-sha1.h  ogs-sha2-hmac.c  ogs-sha2-hmac.h  ogs-sha2.c  ogs-sha2.h  snow-3g.c  snow-3g.h  zuc.c  zuc.h
lib/dbi/: Makefile.am  ims.c  ims.h  meson.build  ogs-dbi.h  ogs-mongoc.c  ogs-mongoc.h  path.c  path.h  session.c  session.h  subscription.c  subscription.h  timer.c  timer.h
lib/diameter/: Makefile.am  config.c  init.c  libapp_sip.c  logger.c  logger.h  meson.build  (+5 more)
src/: Makefile.am  app-init.h  app.h  app_init.h  cellwire.h  common.c  common.h  config.c  context.c  context.h  dp_main.c  enb_s1_sm.c  epc.c  event.c  event.h  hss.c  init.c  init.h  main.c  master_sm.c  meson.build  mme.c  mme_main.c  mme_sm.c  nextepc.h  pcrf.c  pgw.c  s1_path.c  s1_path.h  s1ap_build.c  s1ap_build.h  s1ap_contents.c  s1ap_contents.h  s1ap_conv.c  s1ap_conv.h  s1ap_message.c  s1ap_message.h  s1ap_path.c  s1ap_path.h  s6a_auth.c  (+9 more)
test/: 3gpp_test.c  Makefile.am  abts.c  abts_tests.h  attach_test.c  base_test.c  checkepc.sh  enb_setup_test.c  gtp_message_test.c  handover_test.c  nas_message_test.c  nas_sm_test.c  s1ap_enb_build.c  s1ap_enb_build.h  s1ap_enb_message.c  s1ap_enb_message.h  s1ap_message_test.c  s1ap_sm_test.c  s1ap_test.c  s1setup_test.c  sample-simple.conf.in  sample-volte.conf.in  sample.conf.in  security_test.c  testpacket.c  testpacket.h  tests1ap.c  tests1ap.h  testsctp.c  testsuite.at  testusrsctp.c  testutil.c  testutil.h  volte_test.c
tests/: Makefile.am  meson.build  sample-complex.conf.in  sample-csfb.conf.in  sample-simple.conf.in  sample-volte.conf.in  testbed-api-contracts.py  testsuite.at
(+17595 files in other folders)
